# BoardGame

./: .gitignore  README.md  api_functions.py  classes.ipynb  classes.py  constants.py  cron_find_new_games.sh  cron_update_existing_games.sh  find_new_games.py  get_user_data.ipynb  parsing-data.ipynb  parsing.ipynb  pyproject.toml  update_existing_games.py
.ipynb_checkpoints/: parsing-data-checkpoint.ipynb
