[project]
name = "boardgame"
version = "0.1.0"
description = "Boardgame recommendation system"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "altair>=5.2.0",
    "argparse>=1.4.0",
    "beautifulsoup4>=4.12.2",
    "dill>=0.3.7",
    "flask>=3.0.0",
    "folium>=0.15.1",
    "gunicorn==22.0.0",
    "ipykernel>=6.28.0",
    "jinja2>=3.1.3",
    "jupyterlab>=4.0.10",
    "lxml>=5.1.0",
    "matplotlib>=3.8.2",
    "more-itertools>=10.2.0",
    "nbformat>=5.9.2",
    "nbzip>=0.1.0",
    "networkx>=3.2.1",
    "numpy>=1.26.4",
    "oauthlib>=3.2.2",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "seaborn>=0.13.1",
    "sqlalchemy>=2.0.25",
    "statsmodels>=0.14.1",
    "sympy>=1.12",
    "tqdm>=4.66.1",
]
authors = [{ name = "Russell Martin", email = "russell@martinandbrown.com" }]
